1st version of firmware

--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -29,7 +29,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">mac1200 (E:/EthernetBRIDGE/src/mac1200.v)</td>
+<td class="label">top_bridge (E:/EthernetBRIDGE/src/top_bridge.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -37,7 +37,34 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--mac1100
+ (E:/EthernetBRIDGE/src/top_bridge.v)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--mac1200
+ (E:/EthernetBRIDGE/src/mac1200.v)</td>
+<td align = "center">456</td>
+<td align = "center">-</td>
+<td align = "center">514</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--mac1200
+ (E:/EthernetBRIDGE/src/top_bridge.v)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--mac1200
  (E:/EthernetBRIDGE/src/mac1200.v)</td>
 <td align = "center">456</td>
 <td align = "center">-</td>
