--- a/impl/pnr/EthernetBRIDGE.power.html
+++ b/impl/pnr/EthernetBRIDGE.power.html
@@ -75,19 +75,19 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Part Number</td>
-<td>GW1N-LV4MG160C5/I4</td>
+<td>GW2A-LV18EQ144C8/I7</td>
 </tr>
 <tr>
 <td class="label">Device</td>
-<td>GW1N-4</td>
+<td>GW2A-18</td>
 </tr>
 <tr>
 <td class="label">Device Version</td>
-<td>D</td>
+<td>C</td>
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Thu Jan 19 15:48:24 2023
+<td>Fri Feb 03 17:07:31 2023
 </td>
 </tr>
 <tr>
@@ -100,30 +100,30 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>8.571</td>
+<td>171.233</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>8.571</td>
+<td>162.080</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>0.000</td>
+<td>9.152</td>
 </tr>
 </table>
 <h2><a name="Thermal_Info">Thermal Information:</a></h2>
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.385</td>
+<td>27.889</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
-<td>43.720</td>
+<td>16.870</td>
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.615</td>
+<td>82.111</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -191,24 +191,31 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>VCC</td>
-<td>1.200</td>
-<td>0.000</td>
-<td>1.984</td>
-<td>2.380</td>
+<td>1.000</td>
+<td>2.967</td>
+<td>102.385</td>
+<td>105.352</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>0.000</td>
-<td>2.424</td>
-<td>6.061</td>
+<td>1.485</td>
+<td>23.366</td>
+<td>62.127</td>
+</tr>
+<tr>
+<td>VCCIO12</td>
+<td>1.200</td>
+<td>0.315</td>
+<td>0.012</td>
+<td>0.393</td>
 </tr>
 <tr>
 <td>VCCIO18</td>
 <td>1.800</td>
-<td>0.000</td>
-<td>0.072</td>
-<td>0.130</td>
+<td>1.163</td>
+<td>0.704</td>
+<td>3.361</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -221,10 +228,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Average Toggle Rate(millions of transitions/sec)</th>
 </tr>
 <tr>
+<td>Logic</td>
+<td>1.461</td>
+<td>NA</td>
+<td>12.229</td>
+</tr>
+<tr>
 <td>IO</td>
-<td>0.397
-<td>0.397
-<td>0.000
+<td>11.495
+<td>3.817
+<td>20.000
 </tr>
 </table>
 <h2><a name="By_Hierarchy">Power By Hierarchy:</a></h2>
@@ -235,7 +248,95 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Block Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>mac1200</td>
+<td>top_bridge</td>
+<td>1.461</td>
+<td>1.461(1.461)</td>
+<tr>
+<td>top_bridge/mac1100/</td>
+<td>0.730</td>
+<td>0.730(0.730)</td>
+<tr>
+<td>top_bridge/mac1100/mac1200/</td>
+<td>0.730</td>
+<td>0.730(0.730)</td>
+<tr>
+<td>top_bridge/mac1100/mac1200/u_triple_speed_mac/</td>
+<td>0.730</td>
+<td>0.730(0.730)</td>
+<tr>
+<td>top_bridge/mac1100/mac1200/u_triple_speed_mac/u_mac_tx_ctrl/</td>
+<td>0.715</td>
+<td>0.715(0.139)</td>
+<tr>
+<td>top_bridge/mac1100/mac1200/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/</td>
+<td>0.093</td>
+<td>0.093(0.000)</td>
+<tr>
+<td>top_bridge/mac1100/mac1200/u_triple_speed_mac/u_mac_tx_ctrl/u_lfsr/</td>
+<td>0.045</td>
+<td>0.045(0.000)</td>
+<tr>
+<td>top_bridge/mac1100/mac1200/u_triple_speed_mac/u_mac_tx_if_block/</td>
+<td>0.016</td>
+<td>0.016(0.016)</td>
+<tr>
+<td>top_bridge/mac1100/mac1200/u_triple_speed_mac/u_mac_tx_if_block/u_mii_tx_if/</td>
+<td>0.016</td>
+<td>0.016(0.000)</td>
+<tr>
+<td>top_bridge/mac1100/mac1200/u_triple_speed_mac/u_miim_block/</td>
+<td>0.000</td>
+<td>0.000(0.000)</td>
+<tr>
+<td>top_bridge/mac1100/mac1200/u_triple_speed_mac/u_miim_block/u_eth_miim/</td>
+<td>0.000</td>
+<td>0.000(0.000)</td>
+<tr>
+<td>top_bridge/mac1100/mac1200/u_triple_speed_mac/u_miim_block/u_eth_miim/clkgen/</td>
+<td>0.000</td>
+<td>0.000(0.000)</td>
+<tr>
+<td>top_bridge/mac1200/</td>
+<td>0.730</td>
+<td>0.730(0.730)</td>
+<tr>
+<td>top_bridge/mac1200/mac1200_0/</td>
+<td>0.730</td>
+<td>0.730(0.730)</td>
+<tr>
+<td>top_bridge/mac1200/mac1200_0/u_triple_speed_mac/</td>
+<td>0.730</td>
+<td>0.730(0.730)</td>
+<tr>
+<td>top_bridge/mac1200/mac1200_0/u_triple_speed_mac/u_mac_tx_ctrl/</td>
+<td>0.715</td>
+<td>0.715(0.139)</td>
+<tr>
+<td>top_bridge/mac1200/mac1200_0/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/</td>
+<td>0.093</td>
+<td>0.093(0.000)</td>
+<tr>
+<td>top_bridge/mac1200/mac1200_0/u_triple_speed_mac/u_mac_tx_ctrl/u_lfsr/</td>
+<td>0.045</td>
+<td>0.045(0.000)</td>
+<tr>
+<td>top_bridge/mac1200/mac1200_0/u_triple_speed_mac/u_mac_tx_if_block/</td>
+<td>0.016</td>
+<td>0.016(0.016)</td>
+<tr>
+<td>top_bridge/mac1200/mac1200_0/u_triple_speed_mac/u_mac_tx_if_block/u_mii_tx_if/</td>
+<td>0.016</td>
+<td>0.016(0.000)</td>
+<tr>
+<td>top_bridge/mac1200/mac1200_0/u_triple_speed_mac/u_miim_block/</td>
+<td>0.000</td>
+<td>0.000(0.000)</td>
+<tr>
+<td>top_bridge/mac1200/mac1200_0/u_triple_speed_mac/u_miim_block/u_eth_miim/</td>
+<td>0.000</td>
+<td>0.000(0.000)</td>
+<tr>
+<td>top_bridge/mac1200/mac1200_0/u_triple_speed_mac/u_miim_block/u_eth_miim/clkgen/</td>
 <td>0.000</td>
 <td>0.000(0.000)</td>
 </table>
@@ -245,6 +346,21 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Clock Domain</th>
 <th class="label">Clock Frequency(Mhz)</th>
 <th class="label">Total Dynamic Power(mW)</th>
+</tr>
+<tr>
+<td>phy1100_tx_clk</td>
+<td>100.000</td>
+<td>0.737</td>
+</tr>
+<tr>
+<td>phy1200_tx_clk</td>
+<td>100.000</td>
+<td>0.737</td>
+</tr>
+<tr>
+<td>NO CLOCK DOMAIN</td>
+<td>0.000</td>
+<td>0.000</td>
 </tr>
 </table>
 </div><!-- content -->
