Some fixes + prepare for testing devkit

--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -29,7 +29,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">top_bridge (E:/EthernetBRIDGE/src/top_bridge.v)</td>
+<td class="label">top_mac_to_fifo_test (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -37,26 +37,8 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--mac1100
- (E:/EthernetBRIDGE/src/top_bridge.v)</td>
-<td align = "center">-</td>
-<td align = "center">-</td>
-<td align = "center">-</td>
-<td align = "center">-</td>
-<td align = "center">-</td>
-<td align = "center">-</td>
-</tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--mac_controller
- (E:/EthernetBRIDGE/src/mac_controller.v)</td>
-<td align = "center">456</td>
-<td align = "center">-</td>
-<td align = "center">514</td>
-<td align = "center">-</td>
-<td align = "center">-</td>
-<td align = "center">-</td>
-</tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--mac1200
- (E:/EthernetBRIDGE/src/top_bridge.v)</td>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--mac
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -66,9 +48,9 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--mac_controller
  (E:/EthernetBRIDGE/src/mac_controller.v)</td>
-<td align = "center">456</td>
+<td align = "center">634</td>
 <td align = "center">-</td>
-<td align = "center">514</td>
+<td align = "center">554</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
