--- a/impl/pnr/EthernetBRIDGE.pin.html
+++ b/impl/pnr/EthernetBRIDGE.pin.html
@@ -78,7 +78,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sat Feb 25 16:53:35 2023
+<td>Wed Mar 01 20:16:00 2023
 </td>
 </tr>
 <tr>
@@ -238,25 +238,6 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>OFF</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">phy_mdio</td>
-<td></td>
-<td>40/5</td>
-<td>Y</td>
-<td>in</td>
-<td>IOB6[A]</td>
-<td>LVCMOS18</td>
-<td>NA</td>
-<td>UP</td>
-<td>ON</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -671,6 +652,25 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>UP</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">phy_mdio</td>
+<td></td>
+<td>40/5</td>
+<td>Y</td>
+<td>io</td>
+<td>IOB6[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
@@ -1263,15 +1263,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">40/5</td>
 <td>phy_mdio</td>
-<td>in</td>
+<td>io</td>
 <td>IOB6[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
+<td>NA</td>
 <td>NONE</td>
-<td>NA</td>
-<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
