--- a/impl/pnr/EthernetBRIDGE.power.html
+++ b/impl/pnr/EthernetBRIDGE.power.html
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sat Feb 25 16:53:35 2023
+<td>Wed Mar 01 20:16:00 2023
 </td>
 </tr>
 <tr>
@@ -100,11 +100,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>172.393</td>
+<td>172.471</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>163.113</td>
+<td>163.191</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
@@ -115,7 +115,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>27.908</td>
+<td>27.910</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>82.092</td>
+<td>82.090</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -193,8 +193,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>VCC</td>
 <td>1.000</td>
 <td>2.495</td>
-<td>102.723</td>
-<td>105.219</td>
+<td>102.750</td>
+<td>105.245</td>
 </tr>
 <tr>
 <td>VCCX</td>
@@ -207,8 +207,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>VCCIO18</td>
 <td>1.800</td>
 <td>1.571</td>
-<td>1.098</td>
-<td>4.803</td>
+<td>1.126</td>
+<td>4.855</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -224,13 +224,13 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>Logic</td>
 <td>0.857</td>
 <td>NA</td>
-<td>12.277</td>
+<td>11.361</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>14.229
-<td>5.854
-<td>14.655
+<td>14.384
+<td>6.009
+<td>13.710
 </tr>
 </table>
 <h2><a name="By_Hierarchy">Power By Hierarchy:</a></h2>
@@ -304,6 +304,14 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/clkgen/</td>
 <td>0.000</td>
 <td>0.000(0.000)</td>
+<tr>
+<td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/outctrl/</td>
+<td>0.000</td>
+<td>0.000(0.000)</td>
+<tr>
+<td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/shftrg/</td>
+<td>0.000</td>
+<td>0.000(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -313,14 +321,14 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Total Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>phy_tx_clk</td>
-<td>100.000</td>
-<td>0.752</td>
-</tr>
-<tr>
 <td>phy_rx_clk</td>
 <td>100.000</td>
 <td>0.153</td>
+</tr>
+<tr>
+<td>phy_tx_clk</td>
+<td>100.000</td>
+<td>0.752</td>
 </tr>
 <tr>
 <td>NO CLOCK DOMAIN</td>
