--- a/impl/pnr/EthernetBRIDGE.rpt.html
+++ b/impl/pnr/EthernetBRIDGE.rpt.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sat Feb 25 16:53:35 2023
+<td>Wed Mar 01 20:16:00 2023
 </td>
 </tr>
 <tr>
@@ -97,23 +97,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.062s
-   Placement Phase 1: CPU time = 0h 0m 0.297s, Elapsed time = 0h 0m 0.296s
-   Placement Phase 2: CPU time = 0h 0m 0.124s, Elapsed time = 0h 0m 0.124s
-   Placement Phase 3: CPU time = 0h 0m 0.824s, Elapsed time = 0h 0m 0.824s
+   Placement Phase 0: CPU time = 0h 0m 0.065s, Elapsed time = 0h 0m 0.064s
+   Placement Phase 1: CPU time = 0h 0m 0.23s, Elapsed time = 0h 0m 0.231s
+   Placement Phase 2: CPU time = 0h 0m 0.104s, Elapsed time = 0h 0m 0.104s
+   Placement Phase 3: CPU time = 0h 0m 0.807s, Elapsed time = 0h 0m 0.807s
    Total Placement: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
 Running routing:
    Routing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
-   Routing Phase 1: CPU time = 0h 0m 0.187s, Elapsed time = 0h 0m 0.187s
-   Routing Phase 2: CPU time = 0h 0m 0.277s, Elapsed time = 0h 0m 0.277s
-   Total Routing: CPU time = 0h 0m 0.464s, Elapsed time = 0h 0m 0.464s
+   Routing Phase 1: CPU time = 0h 0m 0.122s, Elapsed time = 0h 0m 0.122s
+   Routing Phase 2: CPU time = 0h 0m 0.3s, Elapsed time = 0h 0m 0.3s
+   Total Routing: CPU time = 0h 0m 0.422s, Elapsed time = 0h 0m 0.422s
 Generate output files:
    CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 4s, Elapsed time = 0h 0m 4s, Peak memory usage = 325MB</td>
+<td>CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s, Peak memory usage = 308MB</td>
 </tr>
 </table>
 <br/>
@@ -128,12 +128,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>549/20736</td>
+<td>604/20736</td>
 <td>3%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>549(549 LUT, 0 ALU, 0 ROM16)</td>
+<td>604(604 LUT, 0 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -143,8 +143,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>629/15909</td>
-<td>4%</td>
+<td>669/15909</td>
+<td>5%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as Latch</td>
@@ -153,8 +153,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>611/15552</td>
-<td>4%</td>
+<td>650/15552</td>
+<td>5%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --I/O Register as Latch</td>
@@ -163,13 +163,13 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --I/O Register as FF</td>
-<td>18/357</td>
+<td>19/357</td>
 <td>6%</td>
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>510/10368</td>
-<td>5%</td>
+<td>545/10368</td>
+<td>6%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
@@ -178,7 +178,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">I/O Buf</td>
-<td>29</td>
+<td>30</td>
 <td>-</td>
 </tr>
 <tr>
@@ -193,7 +193,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label"> &nbsp &nbsp --Inout Buf</td>
-<td>0</td>
+<td>1</td>
 <td>-</td>
 </tr>
 <tr>
@@ -498,25 +498,6 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>OFF</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">phy_mdio</td>
-<td></td>
-<td>40/5</td>
-<td>Y</td>
-<td>in</td>
-<td>IOB6[A]</td>
-<td>LVCMOS18</td>
-<td>NA</td>
-<td>UP</td>
-<td>ON</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -931,6 +912,25 @@ Generate output files:
 <td>UP</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">phy_mdio</td>
+<td></td>
+<td>40/5</td>
+<td>Y</td>
+<td>io</td>
+<td>IOB6[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
@@ -1523,15 +1523,15 @@ Generate output files:
 <tr>
 <td class="label">40/5</td>
 <td>phy_mdio</td>
-<td>in</td>
+<td>io</td>
 <td>IOB6[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
+<td>NA</td>
 <td>NONE</td>
-<td>NA</td>
-<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
